--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Feed</title>
-  <script src="../js/feed.js" defer></script>
-  <link rel="stylesheet" href="../css/feed.css">
+  <title><%= title %></title>
+  <link rel="stylesheet" href="/css/feed.css">
+  <script src="/js/feed.js" defer></script>
 </head>
 <body>
   <main id="feedContainer">
