--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title><%= title %></title>
   <link rel="stylesheet" href="/css/feed.css">
-  <script src="/js/feed.js" defer></script>
+  <script type="module" src="/js/feed.js" defer></script>
 </head>
 <body>
   <main id="feedContainer">
