--- a/public/css/feed.css
+++ b/public/css/feed.css
@@ -84,7 +84,8 @@ body {
 .postContent {
   font-size: 16px;
   color: #000;
-  margin-top: 0px;
+  margin-top: 6px;
+  margin-bottom: 6px;
   word-break: break-word;
 }
 
