Fix logout function & add header to include username & logout button

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -8,6 +8,12 @@
   <script type="module" src="/js/feed.js" defer></script>
 </head>
 <body>
+  <header id="siteHeader">
+    <div class="headerContent">
+      <span id="headerUsername"></span>
+      <a href="/logout" id="logoutButton">Logout</a>
+    </div>
+  </header>
   <main id="feedContainer">
     <section id="newPostContainer">
       <textarea id="newPostContent" placeholder="What's on your mind?" maxlength="280"></textarea>
